fix: set the horizontal scrollbar's height and width to `auto`
In Firefox the horizontal scrollbar looks very small. With a width set
to `auto`, it looks bigger and better. In Chromium, without an automatic
height, the new color changes do not appear.

Now the horizontal scrollbar looks consistent in both chromium and firefox.

--- a/assets/scss/partials/layout/list.scss
+++ b/assets/scss/partials/layout/list.scss
@@ -52,11 +52,15 @@
     margin-bottom: var(--section-separation);
     overflow-x: auto;
 
-    /* Scrollbar styles for Firefox */
-    scrollbar-width: thin;
+    /* scrollbar styles for Firefox */
+    scrollbar-width: auto;
     scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
 
-    /* Scrollbar styles for Chromium */
+    /* scrollbar styles for Chromium */
+    &::-webkit-scrollbar {
+      height: auto;
+    }
+
     &::-webkit-scrollbar-thumb {
       background-color: var(--scrollbar-thumb);
     }
